// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Prototypes/ButtonGroup Button Group 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="button-group grid grid-cols-2 gap-2"
  >
    <div
      className="button-group__item"
    >
      <Button
        onClick={[Function]}
        size="is-small"
      >
        <button
          className="button is-small"
          onClick={[Function]}
        >
          Save
        </button>
      </Button>
    </div>
    <div
      className="button-group__item"
    >
      <Button
        className="is-secondary"
        onClick={[Function]}
        size="is-small"
      >
        <button
          className="button is-small is-secondary"
          onClick={[Function]}
        >
          Preview
        </button>
      </Button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Prototypes/ButtonGroup Button Group Stack 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <div
    className="button-group grid grid-cols-2 gap-2"
  >
    <div
      className="button-group__item"
    >
      <Button
        onClick={[Function]}
        size="is-small"
      >
        <button
          className="button is-small"
          onClick={[Function]}
        >
          Save
        </button>
      </Button>
    </div>
    <div
      className="button-group__item"
    >
      <Button
        className="is-secondary"
        onClick={[Function]}
        size="is-small"
      >
        <button
          className="button is-small is-secondary"
          onClick={[Function]}
        >
          Preview
        </button>
      </Button>
    </div>
    <div
      className="button-group__item col-span-2"
    >
      <Button
        onClick={[Function]}
        size="is-small"
        type="is-primary"
      >
        <button
          className="button is-primary is-small"
          onClick={[Function]}
        >
          Submit
        </button>
      </Button>
    </div>
  </div>
</div>
`;
